<resources>
    <string name="app_name">PeddyPraxis</string>
    <string name="preambPatio">Freshmen are usually shy …   The purpose of the first task is to put the freshman in the right frame of mind to face the challenges ahead!\nFreshman, for goodness sake, head out to the courtyard in front of the bar of Building A!\n\nTask: The freshman has to walk, for 5 minutes in a row, around the courtyard of the Building A, blinking an eye and smiling with the front camera of the mobile device pointed at you</string>
    <string name="patio"> The Courtyard</string>
    <string name="preambEdificios"> Campus 2 has several buildings, each one identified by a letter (A, B, C, D and E). Some have been studying for several years at IPL and have difficulty remembering the letter that identifies a particular building.\nFreshman, for goodness sake, go to the roundabout at the entrance to Building A!\n\nTask: The freshman has to take a picture of something that identifies each of the four buildings. Clue: \"Edifício X\"</string>
    <string name="edificios">The Buildings</string>
    <string name="biblioteca">The Library</string>
    <string name="preambBiblioteca">The José Saramago Library is perhaps the most emblematic of Campus 2 buildings. Any self-respecting e-Godfather should motivate his freshman to acclimatize to this temple of knowledge.\nFreshman, for goodness sake, go to the Library!\n\nTask: The José Saramago Library is an area of ​​Culture, Knowledge and …? </string>
    <string name="descompressao">Decompression</string>
    <string name="preambDescompressao">Being \"praxado\" is a lot of fun, but in the end you have to go back to the real world … \n The freshman should carry out an outdoor meditation session that allows him to relax so that you can go back to class calm and focused.\nFreshman, for goodness sake, head out to the courtyard in front of the bar of Building A!\n\nTask: The freshman must be seated for 10 minutes, in the courtyard of the Building A, with the phone on your lap with the screen facing down (it s for relaxing!).\nIf it is raining the freshman can fulfill this task in one of the 3 points of interest near the place where it is.</string>
    <string name="RegSuc">Registered successfully</string>
    <string name="RegFail">Failed registration:</string>
    <string name="EmpPass">User password can not be empty</string>    
    <string name="empEmail">User email can not be empty</string>   
    <string name="enterAllFields">Please enter all fields</string>  
    <string name="loginIN">Logging in</string>
    <string name="logFail">Failed login</string>
    <string name="logSuc">Session started successfully</string> 
    <string name="errLerDados">Error trying to save user data</string> 
    <string name="gameTitle">PeddyPraxis</string> 
    <string name="descrGame">Best Ever Game</string>
    <string name="gameAuth"><![CDATA[Parracho & Xavi]]></string>  
    <string name="estatiTitle">Statistics</string>
    <string name="name">"Name: "</string>
    <string name="age">"Age: "</string>
    <string name="bestTime">"Best time: "</string> 
    <string name="numGameStr">"Number of games performed: "</string>
    <string name="finishGame">"Number of completed games: "</string>
    <string name="percVict">"Percentage of victories: "</string>
    <string name="qstnLog">Do you really want to sign out of your account?</string>
    <string name="lestPlay">So let\'s continue playing!</string>
    <string name="enterMail">Please enter your registered email ID</string>
    <string name="sndEmail">Sending Email!</string>
    <string name="passResSnt">Email with reset password sent</string>
    <string name="errEmailRstPass">Error sending password reset email</string>    
    <string name="corrida">Run</string>  
    <string name="preambCorrida">The freshman has 1 minute to move to the courtyard of A. Start in ESSlei.</string>  
    <string name="pergunta">The question</string>  
    <string name="resposta">Answer?</string>  
    <string name="fnsGame1h">Good Freshman! You managed to complete everything in 1 hour, just shy out timing out!</string>  
    <string name="fnshGameInTime">Good Freshman! You have completed everything in</string> 
    <string name="min">minutes and </string> 
    <string name="sec">seconds </string>
    <string name="finTime">"Unfortunately the time is up! You just completed "</string>
    <string name="numTask">" tasks"</string>
    <string name="returnGmMn">Back Game Menu</string>    
    <string name="goPatA">Freshman, head for the courtyard of A</string>    
    <string name="goRotA">Freshman, go to the roundabout near the A</string>    
    <string name="goBib">Freshman, head to the Library</string>    
    <string name="rightAns">Enter the correct answer!</string>    
    <string name="extGame">Exit Game</string>    
    <string name="retMnJg">Freshman, do you want to return to the game menu?</string>    
    <string name="warnLst">Freshman, are you sure you want to finish the game? Any progress you\'ve made will be lost</string>    
    <string name="fngame">End Game</string>    
    <string name="cancel">Cancel</string>    
    <string name="congt">CONGRATULATIONS!</string>   
    <string name="checksta">Good freshman! You managed to improve your time, congratulations! Check the information icon to see your stats</string>   
    <string name="descPat">The freshman has to walk, for 5 minutes in a row, around the yard Building A, blinking an eye and smiling with the front camera of the mobile device pointed at you!</string>
    <string name="endTask">Exit Task</string>    
    <string name="Bibl">The Library</string>   
    <string name="descBib">The José Saramago Library is an area of ​​Culture, Knowledge and …? To complete this task, you should take a photo of the answer somewhere in the Library</string>    
    <string name="finish">End</string>  
    <string name="descompDesc">The freshman must be seated for 10 minutes in the courtyard of the Building A, with the phone on your lap with the screen facing down (it\'s for relaxing!).</string>    
    <string name="atention">Attention!</string>
    <string name="warnAtent">It has been detected that the best conditions are not met to finish this activity in the yard. </string>  
    <string name="goNearbyPlac">Please go to one of these places of interest if you wish. </string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_photo">Take photo</string>
    <string name="jogar_tarefa">Play Task</string>
    <string name="insira_a_resposta">Insert Answer</string>
    <string name="reset_password">Reset Password</string>
    <string name="game">Game:</string>
    <string name="auth">Auth:</string>
    <string name="order">Order:</string>
    <string name="estatisticas">Statistics</string>
    <string name="sign_in">Sign In!</string>
    <string name="halftime">Half of your time\'s up!</string>
    <string name="almostENdTime">Watch out, it\'s about to end!</string>
    <string name="followrule">You have to follow the rules!</string>
    <string name="welcomePatio">Welcome to the courtyard of A!</string>
    <string name="welcomeBibl">Welcome to the Library!</string>
    <string name="inRotA">Freshman, you\'re at the roundabout!</string>
    <string name="welcomeESSLEI">Welcome to ESSLei!</string>
    <string name="blink">Come on Freshman! Blink those eyes</string>
    <string name="insAge">Insert your age again</string>
    <string name="callAge">Freshman you must be over 17 years old</string>
    <string name="ageInv">Age invalid</string>
    <string name="acabou">Finish</string>
    <string name="OK">OK</string>
    <string name="dentroBiblio">You must be inside library</string>
    <string name="goESSLei">Freshman, go to ESSLei</string>
    <string name="sim">Yes</string>
    <string name="ediErrado">Wrong building!</string>
    <string name="ediEncontrado">"Found building "</string>
    <string name="ediFalta">"Remaining buildings: "</string>
    <string name="qrErrado">Wrong QR Code!</string>
    <string name="qual">"Which "</string>
    <string name="é">"is "</string>
    <string name="o">"the "</string>
    <string name="curso">Course?</string>
    <string name="estarNoPatA">You have to be at the courtyard of A!</string>
    <string name="errado">Wrong!</string>
    <string name="descEdificios">The freshman has to take a picture of something that identifies each of the four buildings. Clue: \"Edifício X\"</string>
    <string name="preambPergunta">We all know that the calorie is ignoble, a rhombus, a being of little cognitive and penetrating capacity, so the need arises to ask you a great and important question, which you must answer correctly.\nFreshman, for goodness sake, head out to the courtyard in front of the bar of Building A!\n\nTask: The freshman has to find out the question through QR Codes scattered around the courtyard. In the end you have to answer it correctly.</string>
    <string name="linguagem">Language</string>
    <string name="descPergunta">The freshman has to find out the question through QR Codes scattered around the courtyard. In the end you have to answer it correctly.</string>
    <string name="nao">No</string>
    <string name="logout">Logout</string>
</resources>
