<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="110dp"
    android:layout_height="195dp"
    android:id="@+id/mCardView"
    android:layout_margin="4dp"
    cardview:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            cardview:srcCompat="@mipmap/praxe"/>

        <TextView
            android:id="@+id/textView_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:text="@string/game"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:text="@string/auth"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/textView_Order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:text="@string/order"
            android:textSize="13dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>